--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -9,6 +9,7 @@ dependencies:
   flutter:
     sdk: flutter
   go_router: ^14.1.4
+  flutter_riverpod: ^2.5.1
 
 dev_dependencies:
   flutter_test:
@@ -16,3 +17,5 @@ dev_dependencies:
 
 flutter:
   uses-material-design: true
+  assets:
+    - assets/questions.json
