--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -10,12 +10,17 @@ dependencies:
     sdk: flutter
   go_router: ^14.1.4
   flutter_riverpod: ^2.5.1
+  flutter_localizations:
+    sdk: flutter
+  intl: ^0.19.0
+  csv: ^5.0.2
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
 
 flutter:
+  generate: true
   uses-material-design: true
   assets:
-    - assets/questions.json
+    - assets/data/
