--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -14,6 +14,8 @@ dependencies:
     sdk: flutter
   intl: ^0.19.0
   csv: ^5.0.2
+  lucide_icons: ^0.322.0
+  shimmer: ^3.0.0
 
 dev_dependencies:
   flutter_test:
