--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -8,13 +8,13 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  go_router: ^14.1.4
-  flutter_riverpod: ^2.5.1
+  go_router: ^16.2.4
+  flutter_riverpod: ^3.0.0
   flutter_localizations:
     sdk: flutter
-  intl: ^0.19.0
+  intl: ^0.20.2
   csv: ^5.0.2
-  lucide_icons: ^0.322.0
+  lucide_flutter: ^0.352.0
   shimmer: ^3.0.0
   firebase_core: ^2.31.1
   firebase_analytics: ^10.10.7
@@ -29,3 +29,4 @@ flutter:
   uses-material-design: true
   assets:
     - assets/data/
+    - assets/events/
