fix(project): full setup for android/ios with updated dependencies

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,30 @@
+# Flutter
+.dart_tool/
+.packages
+.flutter-plugins
+.flutter-plugins-dependencies
+
+# Android
+/android/.gradle/
+/android/app/build/
+
+# iOS
+/ios/Pods/
+/ios/build/
+
+# Binaries
+*.apk
+*.ipa
+*.exe
+*.dll
+*.so
+*.bin
+*.a
+*.class
+*.o
+*.obj
+*.dylib
+
 # Miscellaneous
 *.log
 *.pyc
@@ -17,40 +44,16 @@ migrate_working_dir/
 *.iws
 .idea/
 
-# The .vscode folder contains launch configuration and tasks you configure in
-# VS Code which you may wish to be included in version control, so this line
-# is commented out by default.
-#.vscode/
-
 # Flutter/Dart/Pub related
 **/doc/api/
 **/ios/Flutter/.last_build_id
-.dart_tool/
-.flutter-plugins-dependencies
 .pub-cache/
 .pub/
 /build/
 /coverage/
 
-# Binaries
-*.apk
-*.ipa
-*.exe
-*.dll
-*.so
-*.bin
-*.a
-*.class
-*.o
-*.obj
-*.dylib
-
 # Gradle/iOS build
-/android/.gradle/
-/android/app/build/
 /android/gradle/wrapper/gradle-wrapper.jar
-/ios/Pods/
-/ios/build/
 /ios/Runner/Assets.xcassets/AppIcon.appiconset/*.png
 
 # Symbolication related
@@ -59,7 +62,7 @@ app.*.symbols
 # Obfuscation related
 app.*.map.json
 
-# Android Studio will place build artifacts here
+# Android Studio build outputs
 /android/app/debug
 /android/app/profile
 /android/app/release
