--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -6,13 +6,14 @@ plugins {
 
 android {
     namespace 'com.example.datag'
-    compileSdk 36
+    // Flutter официально поддерживает API ≤34, но мы компилим и тестируем под 35/36 — предупреждения можно игнорировать.
+    compileSdkVersion 36
     ndkVersion flutter.ndkVersion
 
     defaultConfig {
         applicationId 'com.example.datag'
-        minSdk 23
-        targetSdk 36
+        minSdkVersion 23
+        targetSdkVersion 36
         versionCode flutter.versionCode
         versionName flutter.versionName
         multiDexEnabled true
