--- a/ios/Podfile
+++ b/ios/Podfile
@@ -18,5 +18,8 @@ end
 post_install do |installer|
   installer.pods_project.targets.each do |target|
     flutter_post_install(installer, target)
+    target.build_configurations.each do |config|
+      config.build_settings['EXCLUDED_ARCHS[sdk=iphonesimulator*]'] = ''
+    end
   end
 end
