--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -8,21 +8,16 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  go_router: ^16.2.4
   flutter_riverpod: ^3.0.0
-  flutter_localizations:
-    sdk: flutter
+  go_router: ^16.2.4
   intl: ^0.20.2
-  csv: ^5.0.2
-  lucide_flutter: ^0.352.0
   shimmer: ^3.0.0
-  firebase_core: ^2.31.1
-  firebase_analytics: ^10.10.7
-  firebase_crashlytics: ^3.4.18
+  lucide_flutter: ^0.544.0
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
+  flutter_lints: ^3.0.1
 
 flutter:
   generate: true
