--- a/android/build.gradle
+++ b/android/build.gradle
@@ -1,3 +1,14 @@
+buildscript {
+    repositories {
+        google()
+        mavenCentral()
+    }
+    dependencies {
+        classpath "com.android.tools.build:gradle:8.5.2"
+        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:1.9.25"
+    }
+}
+
 allprojects {
     repositories {
         google()
@@ -10,7 +21,6 @@ rootProject.layout.buildDirectory.set(newBuildDir)
 
 subprojects { project ->
     project.layout.buildDirectory.set(newBuildDir.map { it.dir(project.name) })
-    project.evaluationDependsOn(":app")
 }
 
 tasks.register("clean", Delete) {
