--- a/android/settings.gradle
+++ b/android/settings.gradle
@@ -1,27 +1,17 @@
-pluginManagement {
-    def flutterSdkPath = {
-        def properties = new Properties()
-        file("local.properties").withInputStream { properties.load(it) }
-        def sdkPath = properties.getProperty("flutter.sdk")
-        if (sdkPath == null) {
-            throw new GradleException("flutter.sdk not set in local.properties")
-        }
-        return sdkPath
-    }()
+import java.util.Properties
 
-    includeBuild("$flutterSdkPath/packages/flutter_tools/gradle")
+include ':app'
 
-    repositories {
-        google()
-        mavenCentral()
-        gradlePluginPortal()
-    }
+def localPropertiesFile = new File(rootProject.projectDir, "local.properties")
+def properties = new Properties()
+
+if (localPropertiesFile.exists()) {
+    localPropertiesFile.withInputStream { properties.load(it) }
 }
 
-plugins {
-    id "dev.flutter.flutter-plugin-loader" version "1.0.0"
-    id "com.android.application" version "8.6.0" apply false
-    id "org.jetbrains.kotlin.android" version "2.0.20" apply false
+def flutterSdkPath = properties.getProperty('flutter.sdk')
+if (flutterSdkPath == null) {
+    throw new GradleException("Flutter SDK not found. Define flutter.sdk in the local.properties file.")
 }
 
-include(":app")
+apply from: "${flutterSdkPath}/packages/flutter_tools/gradle/app_plugin_loader.gradle"
