--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -29,15 +29,19 @@ android {
 
     buildTypes {
         release {
-            isMinifyEnabled = false
-            isShrinkResources = false
+            minifyEnabled false
+            shrinkResources false
             proguardFiles(getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro')
+        }
+        debug {
+            debuggable true
+            minifyEnabled false
         }
     }
 }
 
 dependencies {
-    implementation "org.jetbrains.kotlin:kotlin-stdlib:1.9.25"
+    implementation "org.jetbrains.kotlin:kotlin-stdlib:2.1.0"
     implementation "androidx.multidex:multidex:2.0.1"
 }
 
