--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -10,16 +10,16 @@ dependencies:
     sdk: flutter
   flutter_localizations:
     sdk: flutter
-  flutter_riverpod: ^3.0.0
+  flutter_riverpod: ^2.5.1
   go_router: ^16.2.4
-  intl: ^0.20.2
+  intl: ^0.19.0
+  lucide_icons: ^0.257.0
   shimmer: ^3.0.0
-  lucide_flutter: ^0.544.0
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
-  flutter_lints: ^4.0.0
+  flutter_lints: ^6.0.0
 
 flutter:
   generate: true
