--- a/l10n.yaml
+++ b/l10n.yaml
@@ -2,4 +2,4 @@ arb-dir: l10n
 template-arb-file: app_en.arb
 output-class: AppLocalizations
 output-localization-file: app_localizations.dart
-synthetic-package: true
+output-dir: lib/l10n/generated
