--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -30,3 +30,9 @@ android {
 flutter {
     source = "../.."
 }
+
+dependencies {
+    implementation "androidx.core:core-ktx:1.13.1"
+    implementation "androidx.appcompat:appcompat:1.7.0"
+    implementation "com.google.android.material:material:1.12.0"
+}
